SERVER-67290 Support repair on clustered collections with missing _mdb_catalog