src/mongo/db/storage/kv/kv_engine.h
@@ -422,6 +422,13 @@ public:
     }
 
     /**
+     * Returns the 'KeyFormat' tied to 'ident'.
+     */
+    virtual KeyFormat getKeyFormat(OperationContext* opCtx, StringData ident) const {
+        MONGO_UNREACHABLE;
+    }
+
+    /**
      * The destructor will never be called from mongod, but may be called from tests.
      * Engines may assume that this will only be called in the case of clean shutdown, even if
      * cleanShutdown() hasn't been called.
