src/mongo/db/storage/wiredtiger/wiredtiger_kv_engine.h
@@ -412,6 +412,8 @@ public:
 
     StatusWith<BSONObj> getStorageMetadata(StringData ident) const override;
 
+    KeyFormat getKeyFormat(OperationContext* opCtx, StringData ident) const override;
+
 private:
     class WiredTigerSessionSweeper;
 
